--- a/Assignments/Assignment2/Archive/RAGHU_EIP3_BATCH_2_ASSIGNMENT2A.ipynb
+++ b/Assignments/Assignment2/Archive/RAGHU_EIP3_BATCH_2_ASSIGNMENT2A.ipynb
@@ -173,10 +173,16 @@
         "``` Learning rate: is a hyperparameter which means that we need to manually guess its value. ```\n",
         "\n",
         "\n",
+        "(  Delta = prediction - actual )\n",
+        "$$ \\Delta = 0.85 - 1.0 = -0.15   $$\n",
         "\n",
-        "$$ \\Delta = 0.85 - 1.0 = -0.15 $$\n",
+        "(Learning rate, we smartly guess the number) \n",
         "\n",
-        "$$ a=0.05 $$\n",
+        "$$ a=0.05 $$ \n",
+        "\n",
+        "\n",
+        "$$ $$\n",
+        "\n",
         "\n",
         "\n",
         "$$\\begin{pmatrix}W5 \\\\\\ W6 \\end{pmatrix}  =  \\begin{pmatrix}0.3 \\\\\\ 0.4 \\end{pmatrix} - 0.05 (-0.15)   \\begin{pmatrix}1.9 \\\\\\ 0.7 \\end{pmatrix}  = \\begin{pmatrix}0.3 \\\\\\ 0.4 \\end{pmatrix} - \\begin{pmatrix} -0.014 \\\\\\ -0.005 \\end{pmatrix}  =  \\begin{pmatrix}0.314 \\\\\\ 0.405 \\end{pmatrix}  $$\n",
